force-app/main/default/objects/Customer_Success_Activity__c/Customer_Success_Activity__c.object-meta.xml
<CustomObject>
    <label>Customer Success Activity</label>
    <pluralLabel>Customer Success Activities</pluralLabel>
    <nameField>
        <displayFormat>CSA-{00000000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>