force-app/main/default/objects/Customer_Success_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check-In Call</fullName>
                <default>true</default>
                <label>Check-In Call</label>
            </value>
            <value>
                <fullName>Executive Business Review</fullName>
            </value>
            <value>
                <fullName>Training Session</fullName>
            </value>
            <value>
                <fullName>Support Escalation</fullName>
            </value>
            <value>
                <fullName>Renewal Discussion</fullName>
            </value>
            <value>
                <fullName>Expansion Discussion</fullName>
            </value>
            <value>
                <fullName>Onboarding Follow-Up</fullName>
            </value>
            <value>
                <fullName>Health Review</fullName>
            </value>
            <value>
                <fullName>Partner Coordination</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>