force-app/main/default/objects/Customer_Success_Activity__c/fields/Customer_Success_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Engagement__c</fullName>
    <label>Customer Success Engagement</label>
    <type>Lookup</type>
    <referenceTo>Customer_Success_Engagement__c</referenceTo>
    <relationshipName>Activities</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>