force-app/main/default/objects/Customer_Success_Activity__c/fields/Logged_By__c.field-meta.xml
<CustomField>
    <fullName>Logged_By__c</fullName>
    <label>Logged By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel
  >Customer Success Activities (Logged By)</relationshipLabel>
    <relationshipName>Logged_Customer_Success_Activities</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>