force-app/main/default/objects/Customer_Success_Activity__c/fields/Occurred_On__c.field-meta.xml
<CustomField>
    <fullName>Occurred_On__c</fullName>
    <label>Occurred On</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>