force-app/main/default/objects/Customer_Success_Activity__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <length>4096</length>
    <type>LongTextArea</type>
    <required>true</required>
</CustomField>